2015-05-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22400.

	* src/attack.c (attack_start), src/nasl_plugins.c (nasl_thread): Remove
	useless socket duplicate to hardcoded value of 4.

2015-05-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22326.

	* src/log.c (log_init): Don't duplicate log file descriptor to fixed 3
	value. Fixes closing of a file descriptor with GnuTLS 3.3.8-9.

2015-05-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22350.

	* src/attack.c (attack_start): Don't send HOST_END when scan was
	stopped.

2015-05-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0.4.

2015-05-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0.3 release.

	* CHANGES: Updated.

2015-05-06  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22296.

	* src/openvassd.c (loading_handler_start): Save the socket's flags
	correctly, and properly use it with O_NONBLOCK.

2015-05-04  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22274.

	* src/openvassd.c (loading_handler_start): Set back the global socket's
	flags after loading end.

2015-04-30  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0.3.

2015-04-30  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0.2 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Bump minimum required openvas-libraries version to
	8.0.2 due to API changes.

	* INSTALL: Make required openvas-libraries version consistent with
	CMakeLists.txt.

2015-04-28  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r22221.

	* src/pluginload.c (plugins_reload_from_dir): Ensure openvas-scanner
	builds with GLib =< 2.28 by wrapping g_slist_free_full () in an ifdef
	and falling back to g_slist_foreach () / g_slist_free () when using